<resources>
    <string name="app_name">NHS Online</string>
    <string name="symptoms">Symptoms</string>
    <string name="appointment">Appointments</string>
    <string name="prescription">Prescriptions</string>
    <string name="my_record">My Record</string>
    <string name="more">More</string>

    <string name="my_account_header">My account</string>
    <string name="organ_donation_register_header">Organ donation register</string>
    <string name="nhs_111_header">Check your symptoms</string>
    <string name="my_record_header">My medical record</string>
    <string name="home_header">Home</string>

    <string name="nhs111_connection_error">NHS 111 unavailable</string>
    <string name="organ_donation_connection_error">Organ donation unavailable</string>
    <string name="connection_error">There\'s an issue with your internet connection</string>
    <string name="connection_error_info">Please check your connection and try again.</string>
    <string name="connection_error_more_info">
        If the problem persists and you need to book an appointment or get a prescription now,
        contact your GP surgery directly. For immediate medical advice, call 111.
    </string>
    <string name="service_unavailable">Service unavailable</string>

    <string name="retryButtonText">Try again</string>
    <string name="errorIconDesc">warning icon</string>
    <string name="tryLaterText">Please try again later.</string>
    <string name="nhsAppHome">NHS App Home</string>
</resources>

