<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/symptom"
        android:icon="@drawable/ic_menu_symptoms"
        android:title="@string/symptoms" />

    <item
        android:id="@+id/appointment"
        android:icon="@drawable/ic_menu_appointment"
        android:title="@string/appointment" />

    <item
        android:id="@+id/prescription"
        android:icon="@drawable/ic_menu_prescription"
        android:title="@string/prescription" />
    <item
        android:id="@+id/my_record"
        android:icon="@drawable/ic_menu_record"
        android:title="@string/my_record" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/more" />

</menu>
