<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nhs.online.nhsonline.MainActivity">

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_45sdp"
        app:layout_constraintBottom_toTopOf="@+id/menuBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />


    <com.nhs.online.nhsonline.navigation.MenuBar
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/menu_top_shadow"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.nhs.online.nhsonline.navigation.MenuBarItem
            android:id="@+id/symptoms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:activeIcon="@mipmap/icon_menu_symptoms_active"
            app:inactiveIcon="@mipmap/icon_menu_symptoms"
            app:menuTitle="@string/symptoms" />

        <com.nhs.online.nhsonline.navigation.MenuBarItem
            android:id="@+id/appointments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:activeIcon="@mipmap/icon_menu_appointments_active"
            app:inactiveIcon="@mipmap/icon_menu_appointments"
            app:menuTitle="@string/appointment" />

        <com.nhs.online.nhsonline.navigation.MenuBarItem
            android:id="@+id/prescriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:activeIcon="@mipmap/icon_menu_prescriptions_active"
            app:inactiveIcon="@mipmap/icon_menu_prescriptions"
            app:menuTitle="@string/prescription" />

        <com.nhs.online.nhsonline.navigation.MenuBarItem
            android:id="@+id/myRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:activeIcon="@mipmap/icon_menu_record_active"
            app:inactiveIcon="@mipmap/icon_menu_record"
            app:menuTitle="@string/my_record" />

        <com.nhs.online.nhsonline.navigation.MenuBarItem
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:activeIcon="@mipmap/icon_menu_more_active"
            app:inactiveIcon="@mipmap/icon_menu_more"
            app:menuTitle="@string/more" />

    </com.nhs.online.nhsonline.navigation.MenuBar>

</android.support.constraint.ConstraintLayout>
